--- a/notes/prd-analysis/cmp-real-analysis.tex
+++ b/notes/prd-analysis/cmp-real-analysis.tex
@@ -70,6 +70,11 @@
 			ToDo, really!
 		\stopproof
 
+		In the differential form, this becomes
+		\startformula
+			\d T(p)  =  ∑_{n = 1}^∞  \frac{1}{n!} \brnd[{\inn[\d v, \D_v]}^n f](p)
+		\stopformula
+
 		There is another form with multi-indexes. But the above form seems way more natural to me. See more in \goto{this}[url(https://en.wikipedia.org/wiki/Taylor_series\#Taylor_series_in_several_variables)] and \goto{this}[url(https://en.wikipedia.org/wiki/Taylor's_theorem\#Taylor's_theorem_for_multivariate_functions)] Wikipedia articles.
 	\stopsection
 
