+ limiting behavior of means; limsupm and liminfm

--- a/notes/env-notes.tex
+++ b/notes/env-notes.tex
@@ -194,11 +194,16 @@
 \def \D{\,\text{D}}
 
 \definemathcommand [ess] [limop] {\mfunction{ess}}
+\definemathcommand [limsupm] [limop] {\overline{\lim}}
+\definemathcommand [liminfm] [limop] {\underline{\lim}}
+
 \definemathcommand [ker] [nolop] {\mfunction{ker}}
 \definemathcommand [im] [nolop] {\mfunction{im}}
+
 \definemathcommand [gcd] [nolop] {\mfunction{gcd}}
 \definemathcommand [lcm] [nolop] {\mfunction{lcm}}
 \definemathcommand [dim] [limop] {\mfunction{dim}}
+
 \definemathcommand [infinitelyoften] [nolop] {\,\mfunction{i.o.}}
 \definemathcommand [eventually] [nolop] {\,\mfunction{ev}}
 
