--- a/notes/bib.bib
+++ b/notes/bib.bib
@@ -1,3 +1,7 @@
+*-------*
+| Books |
+*-------*
+
 @book{Kuo2006,
 	author = {Kuo, Hui-Hsiung},
 	title = {Introduction to Stochastic Integration},
@@ -7,8 +11,7 @@
 	publisher = {Springer-Verlag},
 	location = {New York},
 	isbn = {978-0-387-31057-2},
-	doi = {10.1007/0-387-31057-6}
-}
+	doi = {10.1007/0-387-31057-6}}
 
 @book{Øksendal2003,
 	author = {Øksendal, Bernt},
@@ -21,10 +24,9 @@
 	location = {Berlin},
 	location = {Heidelberg},
 	isbn = {978-3-642-14394-6},
-	doi = {10.1007/978-3-642-14394-6}
-}
+	doi = {10.1007/978-3-642-14394-6}}
 
-@book{JHJ1994,
+@book{HoffmannJørgensen1994,
 	author = {Hoffmann-Jørgensen, Jørgen},
 	title = {Probability With a View Towards Statistics},
 	year = 1994,
@@ -35,10 +37,9 @@
 	publisher = {CRC Press},
 	location = {New York},
 	imprint = {Routledge},
-	isbn = 9780412052217
-}
+	isbn = 9780412052217}
 
-@book{BMC2009,
+@book{MacCluer2009,
 	author = {MacCluer, Barbara},
 	title = {Elementary Functional Analysis},
 	year = 2009,
@@ -49,10 +50,46 @@
 	location = {New York},
 	imprint = {Routledge},
 	isbn = {978-0-387-85528-8},
-	doi = {10.1007/978-0-387-85529-5}
-}
+	doi = {10.1007/978-0-387-85529-5}}
 
-@article{HKSZ2016,
+@book{SundarKallianpur2014,
+	author = {Sundar, P and Kallianpur, Gopinath},
+	title = {Stochastic Analysis and Diffusion Processes},
+	year = 2014,
+	isbn = 9780199657063,
+	doi = {10.1093/acprof:oso/9780199657063.001.0001}}
+
+
+*--------*
+| Papers |
+*--------*
+
+Kuo Integral
+============
+
+@article{AyedKuo2008,
+	author = {Ayed, Wided and Kuo, Hui-Hsiung},
+	title = {An extension of the Itô integral},
+	year = 2008,
+	journal = {Communications on Stochastic Analysis},
+	volume = 2,
+	number = 3,
+	article = 5,
+	doi = {10.31390/cosa.2.3.05},
+	url = {https://digitalcommons.lsu.edu/cosa/vol2/iss3/5}}
+
+@article{AyedKuo2010,
+	author = {Ayed, Wided and Kuo, Hui-Hsiung},
+	title = {An extension of the Itô integral: Toward a general theory of stochastic integration},
+	year = 2010,
+	journal = {Theory of Stochastic Processes},
+	volume = 16,
+	number = 32,
+	issue = 1,
+	pages = 17--28,
+	url = {http://mi.mathnet.ru/thsp56}}
+
+@article{HwangKuoSaitôZhai2016,
 	author = {Hwang, Chii-Ruey and Kuo, Hui-Hsiung and Saitô, Kimiaki and Zhai, Jiayu},
 	title = {A general Itô formula for adapted and instantly independent stochastic processes},
 	year = 2016,
@@ -61,5 +98,4 @@
 	number = 3,
 	article = 5,
 	doi = {10.31390/cosa.10.3.05},
-	url = {https://digitalcommons.lsu.edu/cosa/vol10/iss3/5}
-}
+	url = {https://digitalcommons.lsu.edu/cosa/vol10/iss3/5}}
