--- a/notes/env-notes.tex
+++ b/notes/env-notes.tex
@@ -303,6 +303,6 @@
 \setupbodyfont
 	[reset, \getvariable{document}{font}, \getvariable{document}{fontsize}]
 	% alternatives: xitsbidi, euler
-\setupalign [hz, hanging]
+\setupalign [hanging, hz, lesshyphenation, tolerant, stretch]
 
 \stopenvironment
