--- a/math/notes/prd-analysis/cmp-stochastic-analysis.tex
+++ b/math/notes/prd-analysis/cmp-stochastic-analysis.tex
@@ -228,6 +228,15 @@
 
 	\stopsection
 
+	\startsection[title={Adapted and instantly independent implies deterministic}]
+
+		Let \m{f(t, ω)} be both adapted and instantly independent. Then we can decompose \m{f = f 𝟙_{f > 0} - (-f) 𝟙_{f < 0} = f_+ - f_-}, where everything depends on \m{(t, ω)}. So we can assume \m{f ≥ 0} without loss of generality. Now, \m{𝔼f = 𝔼(𝔼(f ∣ 𝓕_t)) = 𝔼(𝔼f)}, so \m{𝔼(f - 𝔼f) = 0}. But when \m{f ≥ 0}, we have \m{𝔼f ≥ 0}. TODO And then?
+		\startformula
+
+		\stopformula
+
+	\stopsection
+
 \stopchapter
 
 
