--- a/math/talks/env-talks.tex
+++ b/math/talks/env-talks.tex
@@ -93,7 +93,7 @@
 
 % Highlighting
 \definehighlight [comment] [color=darkgray]
-\definehighlight [good] [color=middlegreen]
+\definehighlight [good] [color=darkgreen]
 \definehighlight [okay] [color=indianred]
 \definehighlight [bad] [color=orangered]
 \definehighlight [ugly] [color=lightred]
